# SupportSDK

./: CMakeLists.txt
Samples/: CMakeLists.txt
Samples/PerformanceTests/PerformanceTests/: CMakeLists.txt  HandlesTests.cpp  HandlesTests.h  PerformanceCommon.cpp  PerformanceCommon.h  PerformanceTests.cpp
Samples/RenderTesting/RenderTesting/: CMakeLists.txt  CoreDelegateImpl.cpp
Samples/Resources/Materials/: dragon.material
Samples/Resources/Models/dragon/: dragon.model
Samples/Resources/ResourceSets/: render_testing.res  ui_testing.res
Samples/Resources/Shaders/: TextureShader.fragmentshader  TextureShader.vertexshader
Samples/UI_Testing/UI_Testing/: CMakeLists.txt  CoreDelegateImpl.cpp
Sources/: CMakeLists.txt
Sources/DecisionMaking/: CMakeLists.txt
Sources/ExecutionManagement/: CMakeLists.txt
Sources/GameCore/: PropertyReaders.h
Sources/GameCore/Render/: Commands.cpp  Commands.h  MaterialManager.cpp  MaterialManager.h  Mesh.cpp  Mesh.h  MeshComponent.h  MeshSystem.cpp  MeshSystem.h  RenderTypes.h
Sources/GameCore/Render/Fonts/: FontManager.cpp
Sources/GameCore/Render/OpenGL/: GLTextureManager.cpp
Sources/GameCore/Systems/: TransformationsSystem.h
Sources/Graphs/: CMakeLists.txt
Sources/Math/: CMakeLists.txt
Sources/Terrain/: CMakeLists.txt
Sources/WorldInterfacing/: CMakeLists.txt  PollingStation.h
